Version 1.0.88 Released November 5, 2014

    - Add support for <ErrorCode> and <ErrorMessage> in Twilio <SMSMessage>.
    - Add <EmergencyCallData> mappings for PIDF-LO (draft-ietf-ecrit-additional-data-24).
    - Add support for <confidence> in PIDF-LO (draft-ietf-geopriv-uncertainty-04).
    - Add marshaller/unmarshaller for xCard (vCard in XML).

Version 1.0.70 Released March 20, 2014

    - Many updates and fixes to Twilio bindings

Version 1.0.62 Released April 11 2013

    - Added Twilio ErrorCodes.java
    - Added handling for <PriceUnit>

Version 1.0.54 Released April 2, 2012

    - Fix typo in enum SMSStatus.SEND -> SMSStatus.SENT

Version 1.0.48 Released December 8, 2011

    - Change GML constant types from String to URI
    - Fixed broken setters in CivicAddress class
    - Fix typo in "urn:ogc:def:uom:EPSG::9102" URI name

Version 1.0.46 Released December 2, 2011

    - Added support for <device> and <person> PIDF-LO elements

Version 1.0.42 Released November 27, 2011

    - Added support for HELD (RFC 5985: HTTP-Enabled Location Delivery)
    - Fixed bugs and added tests for PIDF-LO

Version 1.0.32 Released May 12, 2011

    - Added twilio module
    - Build separate JARs for each module
    - Fixed error in pidf status binding definition
    - Javadoc fixes

Version 1.0.7 Released September 28, 2010

    - Initial release

$Id$